feat(Frontend): auth pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -264,7 +264,7 @@
                 <h2>CHORUS FOR <span>SCHOLARSHIP</span></h2>
             </div>
             <p>A decentralized platform designed to offer educational <br> scholarships in Africa funded via DeFi protocols</p>
-            <button class="donate-btn">DONATE</button>    
+            <button class="donate-btn">APPLY NOW</button>    
         </div>
         <div class="mockup">
             <img src="images/Frame 657.png" alt="Scholarship Mobile App" class="hero-img">
